# smart-display

./: .env.development  .gitignore  Cargo.toml  README.md  index.html  next.config.js  package-lock.json  package.json  smart-display.dyn.json
api/: .gitignore  Cargo.toml
api/src/: main.rs
app/: component.module.css  component.tsx  layout.tsx  page.tsx
app/api/: context.ts  route.ts  scheme.ts
app/api/config/: route.ts
app/config/: component.tsx  page.tsx  scheme.ts
app/config/api/: route.ts
assets/shaders/: main.wgsl
site/: biome.json  bun.lockb  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
site/src/: App.css  App.tsx  Config.css  Config.tsx  Home.css  Home.tsx  app.css  app.tsx  components.tsx  config.css  config.tsx  home.css  home.tsx  index.tsx  mock.tsx
src/: App.css  App.tsx  index.tsx  main.rs  picture.rs  text.rs  vite-env.d.ts
