[package]
name = "smart-display"
version = "0.1.0"
edition = "2021"
description = "A lightweight smart display"
authors = ["Takumi Sugimoto <ts20030211@gmail.com>"]

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
image = "0.25"
rand = "0.8"
reqwest = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
warp = "0.3"
