[package]
name = "smart-display"
version = "0.4.3"
edition = "2024"
description = "A lightweight smart display"
authors = ["Takumi Sugimoto <ts20030211@gmail.com>"]
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1"
axum = "0.8"
clap = { version = "4.6", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "gif"] }
rand = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["charset", "h2", "native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["serde", "formatting", "local-offset"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs"] }
tracing = "0.1"
tracing-subscriber = "0.3"
